--- chrome/browser/extensions/BUILD.gn.orig	2026-04-09 06:05:42 UTC
+++ chrome/browser/extensions/BUILD.gn
@@ -1523,6 +1523,10 @@ source_set("extensions") {
       deps += [ "//chrome/services/printing/public/mojom" ]
     }
 
+    if (is_bsd) {
+      sources -= [ "api/image_writer_private/removable_storage_provider_linux.cc" ]
+    }
+
     if (enable_pdf) {
       deps += [
         "//chrome/browser/pdf",
