--- content/shell/BUILD.gn.orig	2026-04-09 06:05:42 UTC
+++ content/shell/BUILD.gn
@@ -1115,7 +1115,7 @@ group("content_shell_crash_test") {
   if (is_win) {
     data_deps += [ "//build/win:copy_cdb_to_output" ]
   }
-  if (is_posix) {
+  if (is_posix && !is_bsd) {
     data_deps += [
       "//third_party/breakpad:dump_syms",
       "//third_party/breakpad:minidump_stackwalk",
