--- components/BUILD.gn.orig	2026-04-15 12:07:04 UTC
+++ components/BUILD.gn
@@ -224,7 +224,6 @@ test("components_unittests") {
     "//components/contextual_search/internal:unit_tests",
     "//components/contextual_tasks:unit_tests",
     "//components/country_codes:unit_tests",
-    "//components/crash/core/common:unit_tests",
     "//components/cross_device/logging:unit_tests",
     "//components/crx_file:unit_tests",
     "//components/data_sharing:unit_tests",
@@ -641,7 +640,7 @@ test("components_unittests") {
       "//components/user_data_importer/content:unit_tests",
     ]
 
-    if (!is_fuchsia) {  #!iOS and!Fuchsia
+    if (!is_fuchsia && !is_bsd) {  #!iOS and!Fuchsia
       deps += [
         "//components/crash/content/browser:unit_tests",
         "//components/crash/core/app:unit_tests",
@@ -818,7 +817,7 @@ test("components_unittests") {
     deps += [ "//components/constrained_window:unit_tests" ]
   }
 
-  if (is_win || is_linux || is_chromeos || is_mac) {
+  if (is_win || (is_linux && !is_bsd) || is_chromeos || is_mac) {
     deps += [
       "//components/stability_report:unit_tests",
       "//components/webapps/isolated_web_apps:unit_tests",
@@ -989,8 +988,7 @@ test("components_unittests") {
   # No components should depend on Chrome.
   # Since //chrome depends on //extensions, we also only assert_no_deps on
   # extensions targets.
-  assert_no_deps = [ "//chrome/*" ]
-  assert_no_deps += disallowed_extension_deps_
+  assert_no_deps = disallowed_extension_deps_
 
   if (is_ios) {
     assert_no_deps += ios_assert_no_deps
@@ -1318,8 +1316,7 @@ if (use_blink) {
     # No components should depend on Chrome.
     # Since //chrome depends on //extensions, we also only assert_no_deps on
     # extensions targets.
-    assert_no_deps = [ "//chrome/*" ]
-    assert_no_deps += disallowed_extension_deps_
+    assert_no_deps = disallowed_extension_deps_
 
     if (is_fuchsia) {
       additional_manifest_fragments = [
