--- ui/views/BUILD.gn.orig	2026-04-15 12:07:04 UTC
+++ ui/views/BUILD.gn
@@ -843,7 +843,6 @@ component("views") {
       "windows_stationarity_monitor_aura.cc",
     ]
     deps += [
-      "//components/crash/core/common:crash_key",
       "//ui/aura",
       "//ui/base/cursor/mojom:cursor_type_shared",
       "//ui/events",
