--- content/browser/BUILD.gn.orig	2026-04-15 11:25:12 UTC
+++ content/browser/BUILD.gn
@@ -2637,6 +2637,14 @@ source_set("browser") {
     ]
   }
 
+  if (is_bsd) {
+    sources += [
+      "file_system_access/file_path_watcher/file_path_watcher_bsd.cc",
+      "file_system_access/file_path_watcher/file_path_watcher_kqueue.cc",
+      "file_system_access/file_path_watcher/file_path_watcher_kqueue.h",
+    ]
+  }
+
   if (is_linux || is_chromeos) {
     sources -=
         [ "file_system_access/file_path_watcher/file_path_watcher_stub.cc" ]
@@ -2686,6 +2694,15 @@ source_set("browser") {
   if (allow_oop_video_decoder) {
     sources += [ "media/oop_video_decoder_factory.cc" ]
     deps += [ "//media/mojo/mojom" ]
+  }
+
+  if (is_bsd) {
+    sources -= [
+      "file_system_access/file_path_watcher/file_path_watcher_inotify.cc",
+      "file_system_access/file_path_watcher/file_path_watcher_inotify.h",
+      "sandbox_ipc_linux.cc",
+      "sandbox_ipc_linux.h",
+    ]
   }
 
   if (is_p2p_enabled) {
