--- services/network/public/mojom/BUILD.gn.orig	2026-04-15 11:25:12 UTC
+++ services/network/public/mojom/BUILD.gn
@@ -720,11 +720,11 @@ mojom("url_loader_base") {
   ]
 
   enabled_features = []
-  if (is_android || is_chromeos || is_linux) {
+  if (!is_bsd && (is_android || is_chromeos || is_linux)) {
     enabled_features += [ "network_change_notifier_in_browser" ]
   }
 
-  if (is_linux) {
+  if (is_linux && !is_bsd) {
     # TODO(crbug.com/40263697): Remove this once is_linux in the mojom IDL does
     # not include lacros.
     enabled_features += [ "use_network_interface_change_listener" ]
@@ -1109,7 +1109,7 @@ mojom("url_loader_base") {
     },
   ]
 
-  if (is_linux) {
+  if (is_linux && !is_bsd) {
     cpp_typemaps += [
       {
         types = [
@@ -1898,7 +1898,7 @@ mojom("mojom") {
     }
   }
 
-  if (is_linux) {
+  if (is_linux && !is_bsd) {
     # TODO(crbug.com/40263697): Remove this once is_linux in the mojom IDL does
     # not include lacros.
     enabled_features += [ "use_network_interface_change_listener" ]
